chore: rework to rely on release jars instead of git branches