@@ -1,9 +1,7 @@
-import carpet.api.settings.CarpetRule;
-import carpet.api.settings.Rule;
-import carpet.api.settings.RuleHelper;
-import carpet.api.settings.Validator;
 import carpet.settings.ParsedRule;
-import carpet.utils.Translations;
+import carpet.settings.Rule;
+import carpet.settings.SettingsManager;
+import carpet.settings.Validator;
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
@@ -13,13 +11,13 @@ import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import net.minecraft.text.Text;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.ClassUtils;
 
 public class Printer {
     public static void print() {
         List<String> ruleNames = new ArrayList<>();
-        for (Class<?> clazz : new Class<?>[] {SETTINGS_FILES}) {
+        for (Class<?> clazz : new Class<?>[] {SETTINGS_CLASSES}) {
             for (Field field : clazz.getDeclaredFields()) {
                 if (field.getAnnotation(Rule.class) == null) continue;
                 ruleNames.add(field.getName());
@@ -28,35 +26,43 @@ public class Printer {
 
         Gson gson = new Gson();
         JsonArray rules = new JsonArray();
-        for (CarpetRule<?> rule : SETTINGS_MANAGER.getCarpetRules()) {
-            if (!ruleNames.contains(rule.name())) continue;
+        SettingsManager[] settingsManagers = new SettingsManager[] {SETTINGS_MANAGERS};
+        for (String ruleName : ruleNames) {
+            ParsedRule<?> rule = null;
+            JsonArray configFiles = new JsonArray();
+            for (SettingsManager settingsManager : settingsManagers) {
+                ParsedRule<?> hasRule = settingsManager.getRule(ruleName);
+                if (hasRule != null) {
+                    rule = hasRule;
+                    configFiles.add(settingsManager.identifier());
+                }
+            }
+            if (rule == null) {
+                System.err.println("Warning: rule '" + ruleName + "' could not be found in any SettingsManager");
+                continue;
+            }
+
+            if (!ruleNames.contains(rule.name)) continue;
             JsonObject obj = new JsonObject();
-            obj.addProperty("name", rule.name());
-            obj.addProperty("description", RuleHelper.translatedDescription(rule));
-            Class<?> primitive = ClassUtils.wrapperToPrimitive(rule.type());
-            obj.addProperty("type", (primitive != null ? primitive : rule.type()).getSimpleName());
-            obj.addProperty("value", RuleHelper.toRuleString(rule.defaultValue()));
-            obj.addProperty("strict", (rule instanceof ParsedRule<?> pr && pr.isStrict));
+            obj.addProperty("name", rule.name);
+            obj.addProperty("description", rule.description);
+            Class<?> primitive = ClassUtils.wrapperToPrimitive(rule.type);
+            obj.addProperty("type", (primitive != null ? primitive : rule.type).getSimpleName());
+            obj.addProperty("value", rule.defaultValue.toString());
+            obj.addProperty("strict", rule.isStrict);
             obj.add(
                     "categories",
                     gson.toJsonTree(
-                            rule.categories().stream().map(String::toUpperCase).toList()));
-            obj.add("options", gson.toJsonTree(rule.suggestions()));
+                            rule.categories.stream().map(String::toUpperCase).collect(Collectors.toList())));
+            obj.add("options", gson.toJsonTree(rule.options));
+            obj.add("extras", gson.toJsonTree(rule.extraInfo));
             obj.add(
-                    "extras",
-                    gson.toJsonTree(
-                            rule.extraInfo().stream().map(Text::getString).toList()));
-            List<String> validators = new ArrayList<>();
-            if (rule instanceof ParsedRule<?> parsedRule) {
-                validators.addAll(parsedRule.realValidators.stream()
-                        .map(Validator::description)
-                        .filter(Objects::nonNull)
-                        .toList());
-            }
-            String additional = Translations.trOrNull(String.format(
-                    "%s.rule.%s.additional", rule.settingsManager().identifier(), rule.name()));
-            if (additional != null) validators.add(additional);
-            obj.add("validators", gson.toJsonTree(validators));
+                    "validators",
+                    gson.toJsonTree(rule.validators.stream()
+                            .map(Validator::description)
+                            .filter(Objects::nonNull)
+                            .collect(Collectors.toList())));
+            obj.add("config_files", configFiles);
             rules.add(obj);
         }
 
