@@ -1,7 +1,6 @@
+import carpet.api.settings.*;
 import carpet.settings.ParsedRule;
-import carpet.settings.Rule;
-import carpet.settings.SettingsManager;
-import carpet.settings.Validator;
+import carpet.utils.Translations;
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
@@ -11,8 +10,7 @@ import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
-import mixin.SettingsManagerAccessor;
+import net.minecraft.text.Text;
 import org.apache.commons.lang3.ClassUtils;
 
 public class Printer {
@@ -29,13 +27,13 @@ public class Printer {
         JsonArray rules = new JsonArray();
         SettingsManager[] settingsManagers = new SettingsManager[] {SETTINGS_MANAGERS};
         for (String ruleName : ruleNames) {
-            ParsedRule<?> rule = null;
+            CarpetRule<?> rule = null;
             JsonArray configFiles = new JsonArray();
             for (SettingsManager settingsManager : settingsManagers) {
-                ParsedRule<?> hasRule = settingsManager.getRule(ruleName);
+                CarpetRule<?> hasRule = settingsManager.getCarpetRule(ruleName);
                 if (hasRule != null) {
                     rule = hasRule;
-                    configFiles.add(((SettingsManagerAccessor) settingsManager).getIdentifier());
+                    configFiles.add(settingsManager.identifier());
                 }
             }
             if (rule == null) {
@@ -43,26 +41,34 @@ public class Printer {
                 continue;
             }
 
-            if (!ruleNames.contains(rule.name)) continue;
+            if (!ruleNames.contains(rule.name())) continue;
             JsonObject obj = new JsonObject();
-            obj.addProperty("name", rule.name);
-            obj.addProperty("description", rule.description);
-            Class<?> primitive = ClassUtils.wrapperToPrimitive(rule.type);
-            obj.addProperty("type", (primitive != null ? primitive : rule.type).getSimpleName());
-            obj.addProperty("value", rule.defaultValue.toString());
-            obj.addProperty("strict", rule.isStrict);
+            obj.addProperty("name", rule.name());
+            obj.addProperty("description", RuleHelper.translatedDescription(rule));
+            Class<?> primitive = ClassUtils.wrapperToPrimitive(rule.type());
+            obj.addProperty("type", (primitive != null ? primitive : rule.type()).getSimpleName());
+            obj.addProperty("value", RuleHelper.toRuleString(rule.defaultValue()));
+            obj.addProperty("strict", (rule instanceof ParsedRule<?> pr && pr.isStrict));
             obj.add(
                     "categories",
                     gson.toJsonTree(
-                            rule.categories.stream().map(String::toUpperCase).collect(Collectors.toList())));
-            obj.add("options", gson.toJsonTree(rule.options));
-            obj.add("extras", gson.toJsonTree(rule.extraInfo));
+                            rule.categories().stream().map(String::toUpperCase).toList()));
+            obj.add("options", gson.toJsonTree(rule.suggestions()));
             obj.add(
-                    "validators",
-                    gson.toJsonTree(rule.validators.stream()
-                            .map(Validator::description)
-                            .filter(Objects::nonNull)
-                            .collect(Collectors.toList())));
+                    "extras",
+                    gson.toJsonTree(
+                            rule.extraInfo().stream().map(Text::getString).toList()));
+            List<String> validators = new ArrayList<>();
+            if (rule instanceof ParsedRule<?> parsedRule) {
+                validators.addAll(parsedRule.realValidators.stream()
+                        .map(Validator::description)
+                        .filter(Objects::nonNull)
+                        .toList());
+            }
+            String additional = Translations.trOrNull(String.format(
+                    "%s.rule.%s.additional", rule.settingsManager().identifier(), rule.name()));
+            if (additional != null) validators.add(additional);
+            obj.add("validators", gson.toJsonTree(validators));
             obj.add("config_files", configFiles);
             rules.add(obj);
         }
